package com.ftn.sbnz.model;

/**
 * Kategorije Cluedo karata (kategorije K iz proposala: S, W, R).
 */
public enum CardType {
    SUSPECT,
    WEAPON,
    ROOM
}
