package com.ftn.sbnz.model;

public enum GameStatus {
    EARLY_GAME,
    MID_GAME,
    LATE_GAME,
    SOLVED
}