package com.ftn.sbnz.model;

public enum ProfileType {

    DEFENSIVE,
    BLUFFING,
    AGGRESSIVE,
    NEUTRAL
}