package com.ftn.sbnz.model;

public enum RiskLevel {
    LOW,
    MEDIUM,
    HIGH
}